creating huards and more functions

--- a/.development.env
+++ b/.development.env
@@ -10,3 +10,10 @@ JWT_REFRESH_SECRET=jwt-refresh-token-singout
 EXPIRES_ACCESS_JWT="24h"
 EXPIRES_REFRESH_JWT="30d"
 CLIENT_URL=http://localhost:3000
+
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER=arslan.galimoff2017@gmail.com
+SMTP_PASSWORD=iffm lven igvi zrzw
+API_URL=http://localhost:8340
